--- a/SimpleTwitterClient/app/src/main/res/values/strings.xml
+++ b/SimpleTwitterClient/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="user_name">user name</string>
     <string name="user_screen_name">user screen name</string>
     <string name="tweet_body">tweet content</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
