--- a/VisionDemo/app/src/main/res/values/strings.xml
+++ b/VisionDemo/app/src/main/res/values/strings.xml
@@ -2,15 +2,21 @@
 <resources>
 
     <string name="app_name">VisionDemo</string>
-    <string name="vision_field_demo">Vision Field Demo</string>
+    <string name="vision_field_demo">Vision Field Test</string>
     <string name="config">Config</string>
     <string name="exam_left">Exam: Left Eye</string>
     <string name="exam_right">Exam: Right Eye</string>
+    <string name="result">Exam Results</string>
     <string name="reset">Reset</string>
     <string name="save">Save</string>
+    <string name="upload">Upload</string>
+    <string name="sync">Sync</string>
+    <string name="delete">Delete</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_preview">PreviewActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_run">RunActivity</string>
+    <string name="title_activity_result">ResultActivity</string>
+    <string name="title_activity_result_details">ResultDetailsActivity</string>
 
 </resources>
