--- a/VisionDemo/app/src/main/res/values/strings.xml
+++ b/VisionDemo/app/src/main/res/values/strings.xml
@@ -19,4 +19,12 @@
     <string name="title_activity_result">ResultActivity</string>
     <string name="title_activity_result_details">ResultDetailsActivity</string>
 
+    <string-array name="config_options_array">
+        <item>CenterX</item>
+        <item>CenterY</item>
+        <item>Radius</item>
+        <item>Gap</item>
+        <item>NumOfStimulus</item>
+        <item>InitDB</item>
+    </string-array>
 </resources>
